--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -21,7 +21,7 @@ page_title_hangzhou_en: Schedule in Hangzhou
 # home
 #########################################
 home_title: 中国PyCon 2014大会,好了!
-home_title_en: PyCon2014China is READY!
+home_title_en: PyCon2014China is COMPLETE!
 home_sponsors: 大会赞助
 home_sponsors_en: Sponsors
 #########################################
