--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -42,21 +42,18 @@ beijing:
   lightening_talks:
     - { time: "15:20", speaker: id_quchifeng }
     - { time: "15:30", speaker: id_chenjian }
-    - { time: "15:40", speaker: id_likuan }
-    - { time: "15:50", speaker: id_liangjie }
-    - time: "16:00"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "16:05", speaker: id_quxiaolong }
-    - { time: "16:15", speaker: id_yanglin }
-    - { time: "16:25", speaker: id_liuxiaoming }
-    - { time: "16:35", speaker: id_luozhicheng }
-    - time: "16:45"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "16:50", speaker: id_bjdujun }
-    - { time: "17:00", speaker: id_binux }
-    - { time: "17:10", speaker: id_caibin }
+    - { time: "15:40", speaker: id_quxiaolong }
+    - { time: "15:50", speaker: id_liuxiaoming }
+    - { time: "16:00", speaker: id_bjdujun }
+    - { time: "16:10", speaker: id_binux }
+    - { time: "16:20", speaker: id_caibin }
+    - { time: "16:30", speaker: id_xianjianjun }
+    - { time: "16:40", speaker: id_liangjie }
+  cancel_talks:
+    - { time: "(ー`´ー)", speaker: id_yanglin }
+    - { time: "(ー`´ー)", speaker: id_luozhicheng }
+    - { time: "(ー`´ー)", speaker: id_kanglei }
+    - { time: "(ー`´ー)", speaker: id_likuan }
 
 ####################################################################
 #    ____  _   _
