上海场 视频和ppt地址 http://localhost:8080/en/shanghai.html#video-and-slides

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -55,6 +55,8 @@ cancel_talks: 协商取消
 cancel_talks_en: Canceled Talks
 notices: 注意
 notices_en: Notices
+video_and_slides: 视频及PPT
+video_and_slides_en: Video and Slides
 speechmaker: 讲师
 speechmaker_en: Speechmaker
 global: 全球
