2015 site for br

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -20,8 +20,8 @@ page_title_hangzhou_en: Schedule in Hangzhou
 #########################################
 # home
 #########################################
-home_title: 中国PyCon 2014大会 <img src="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141201-guido-with-tee.png?imageView2/2/h/200"/> 好了!
-home_title_en: PyCon2014China <img src="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141201-guido-with-tee.png?imageView2/2/h/200"/> is COMPLETE!
+home_title: 中国PyCon 2015大会 要来了!
+home_title_en: PyCon2015China comming soon!
 home_sponsors: 大会赞助
 home_sponsors_en: Sponsors
 #########################################
