--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -7,53 +7,17 @@
 #       |__/
 ####################################################################
 beijing:
-  address: 中国科学院计算机网络信息中心
-  address_en: "Teaching Building at Zhongguancun Campus, CAS"
-  venue: 中科院软件园2号楼 507会议室 (分会场:505)
-  venue_en: Room 507
-  traffic: (北京市海淀区中关村南四街4号)
-  traffic_en: "(...)"
-  maplink: 'http://j.map.baidu.com/GaGwy'
-  date: 2014-11-15 09:00~18:00
+  address: TBD
+  venue: TBD
+  traffic: TBD
+  maplink: 
+  date: 2015-09-17 09:00~18:00
   notices: ...
   morning:
-    - time: "09:00"
-      topic: "签到 & 开场"
-      topic_en: "Check-in"
-    - time: "09:30"
-      topic: "开场"
-      topic_en: "Opening"
-    - { time: "09:45", speaker: id_xutao }
-    - { time: "10:25", speaker: id_zhengkun }
-    - { time: "11:05", speaker: id_dongwei }
-    - { time: "11:45", speaker: id_gaochitao }
   noon:
-    - time: "12:15"
-      topic: 午餐+合照
-      topic_en: Lunch + Photo
   afternoon:
-    - { time: "13:10", speaker: id_wangwei }
-    - { time: "13:50", speaker: id_laike9m }
-    - { time: "14:30", speaker: id_weizeren }
-    - { time: "15:00", speaker: id_linshuai }
-    - time: "15:10"
-      topic: 茶歇
-      topic_en: Intermission
   lightening_talks:
-    - { time: "15:20", speaker: id_quchifeng }
-    - { time: "15:30", speaker: id_chenjian }
-    - { time: "15:40", speaker: id_quxiaolong }
-    - { time: "15:50", speaker: id_liuxiaoming }
-    - { time: "16:00", speaker: id_bjdujun }
-    - { time: "16:10", speaker: id_binux }
-    - { time: "16:20", speaker: id_caibin }
-    - { time: "16:30", speaker: id_xianjianjun }
-    - { time: "16:40", speaker: id_liangjie }
   cancel_talks:
-    - { time: "(ー`´ー)", speaker: id_yanglin }
-    - { time: "(ー`´ー)", speaker: id_luozhicheng }
-    - { time: "(ー`´ー)", speaker: id_kanglei }
-    - { time: "(ー`´ー)", speaker: id_likuan }
 
 ####################################################################
 #    ____  _   _
@@ -63,38 +27,15 @@ beijing:
 #   |____/|_| |_|
 ####################################################################
 shanghai:
-  address: 上海市浦东新区博云路2号
-  address_en: "No.2 Boyun Road, Pudong, Shanghai"
-  venue: 浦软大厦2F
-  venue_en: 2F at Pudong Software Park
-  traffic: 地铁二号线金科路站
-  traffic_en: Jinke Road Station at Metro Line 2
-  date: 2014-11-15 09:00~18:00
+  address: TBD
+  venue: TBD
+  traffic: TBD
+  date: 2015-09-17 09:00~18:00
   notices: ""
   morning:
-    - time: "09:00"
-      topic: "签到 & 开场"
-      topic_en: "Check-In & Opening"
-    - { time: "10:00", speaker: id_xuzhixiang }
-    - { time: "10:40", speaker: id_kj }
-    - { time: "11:20", speaker: id_yejianye }
   noon:
-    - time: "12:00"
-      topic: "午餐+合照"
-      topic_en: "Lunch + Photo"
   afternoon:
-    - { time: "13:00", speaker: id_adieu }
-    - { time: "13:40", speaker: id_hujingchao }
-    - { time: "14:30", speaker: id_weizeren }
-    - time: "15:00"
-      topic: "茶歇"
-    - { time: "15:20", speaker: id_wangzhen }
-    - { time: "16:00", speaker: id_caowenjiong }
-    - { time: "16:40", speaker: id_huangdong }
   lightening_talks:
-    - { time: "17:20", speaker: id_lifeilin }
-    - { time: "17:30", speaker: id_wangjianfeng }
-    - { time: "17:40", speaker: id_pengjunhao }
 
 ####################################################################
 #   珠三角
@@ -105,55 +46,16 @@ shanghai:
 #   /____|_| |_|
 ####################################################################
 zhuhai:
-  address: 珠海吉大 景山路 莲山巷8号 金山软件大厦
-  address_en: "Jinshan Software Building, No.8 Lianshan Road, Jingshan road, Xiangzhou, Zhuhai"
-  venue: 一层会议厅
-  venue_en: Floor 1 Meet Hall
-  traffic: "珠海中天酒店对面,工商银行隔壁;4路,9路,K10路,13路,22路,23路,26路,99路 到水湾北下,即见!坐船,到九洲港下; 城铁到终点 拱北站下; TEXI 13元即达!"
-  traffic_en: "Line 4, 9, K10, 13, 22, 23, 26, 99 at North Shuiwan Station; By ship, Jiu Zhou Port; Subway, Gong Bei Station; Taxi, RMB 13"
-  notices: <a href="http://blog.zhgdg.org/2013-12/et16-pycon-zh/">PyCon2013China 珠海场小结</a> 已经发布,包含更多大会资料/吐糟...
-  date: 2014-11-15 09:30~18:05
+  address: TBD
+  venue: TBD
+  traffic: TBD
+  notices: (￣▽￣)
+  date: 2015-09-17 09:30~18:05
   morning:
-    - time: "09:30"
-      topic: 签到
-      topic_en: "Check-in"
-    - time: "10:00"
-      topic: 暖场 (大妈); <a href="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141115zh-0-zq-start.MP3">录音</a>
-      topic_en: "Starting"
-    - { time: "10:15", speaker: id_wengwei }
-    - { time: "11:00 ", speaker: id_panjunyong }
   noon:
-    - time: "11:50"
-      topic: <img src="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/_foto/1-IMGP6598.JPG?imageView2/2/w/520"/> (ー`´ー) <img src="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/_foto/1-IMGP6675.JPG?imageView2/2/h/150"/>
-      topic_en: Lunch+Photo
   afternoon:
-    - { time: "13:00", speaker: id_taowen }
-    - { time: "13:40", speaker: id_huangyi }
-    - { time: "14:30", speaker: id_weizeren }
-    - time: "15:00"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "15:10", speaker: id_wanganyu }
-    - { time: "15:50", speaker: id_mengfanliang }
-    - time: "16:00"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "16:30", speaker: id_wenming }
-    - { time: "17:00", speaker: id_longlimin }
-    - time: "17:05"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "17:15", speaker: id_jeff }
   lightening_talks:
-    - time: "18:00" 
-      topic: 闪电演讲1/<a href="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141115zh-pmltalk-1.MP3">录音</a>; 优雅的异步 ~ OpenStack
-    - time: "18:05" 
-      topic: 闪电演讲2/<a href="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141115zh-pmltalk-2.MP3">录音</a>; 标准库故事+爬虫
-    - time: "18:10" 
-      topic: 闪电演讲3/<a href="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/141115zh-pmltalk-3-zq.MP3">录音</a>; QPython+GSoC 介绍
   cancel_talks:
-    - { time: "(ー`´ー)", speaker: id_wuzhangjin }
-    - { time: "(ー`´ー)", speaker: id_laiyonghao }
 
 ####################################################################
 #   / ___|__  /
@@ -162,29 +64,16 @@ zhuhai:
 #   |____/____|
 ####################################################################
 suzhou:
-  address: 江苏省苏州市仁爱路258号
-  address_en: "258 Ren'ai Rd, Wuzhong, Suzhou, Jiangsu, China, 215123"
-  venue: 独墅湖图书馆
-  venue_en: Dushu Lake Library
-  traffic: 独墅湖图书馆(110路北线; 110路南线; 146路; 156路; 176路; 178路; 快线2号),中科大西(180路)
-  traffic_en: Dushu Lake Library (110 North Route; 110 South Route; 146; 156; 176; 178; Quick 2),USTC West(180)
+  address: TBD
+  venue: TBD
+  traffic: TBD
   notices: "欢迎参加!"
-  date: 2014-11-15 13:00~17:00
+  date: 2015-09-17 13:00~17:00
   noon:
     - time: "13:00"
-      topic: 签到
+      topic: TBD
       topic_en: Check in
   afternoon:
-    - time: "13:30"
-      topic: 谷歌开发者社区最新动态
-      topic_en: Google Developer Groups Update
-    - { time: "14:30", speaker: id_weizeren }
-    - { time: "15:00", speaker: id_juzheng }
-    - { time: "16:00", speaker: id_laoqi }
-    - time: "17:00"
-      topic: 抽奖
-    - time: "17:30"
-      topic: 结束
 
 ####################################################################
 #   杭州
@@ -195,31 +84,16 @@ suzhou:
 #   |_| |_/____|
 ####################################################################
 hangzhou:
-  address: 杭州市滨江区信诚路567号 
-  address_en: 杭州市滨江区信诚路567号
-  venue: 诺基亚通信杭州全球研发中心 苏黎世会议室
-  venue_en: 诺基亚通信杭州全球研发中心 苏黎世会议室
-  traffic: >
-    横街埠/ B支6,B支3路
-    - 江南大道环兴路口:294路(社区通勤高峰线),B支5路,352, 225(夜间线),113,315
-    - 信诚路江南大道口:107路
+  address: TBD
+  venue: TBD
+  traffic: TBD
   traffic_en: TBD
-  notices: "<a href="http://www.hzgdg.org/events/python">杭州Python 活动 总结</a>"
-  date: "2014-11-22 13:00~18:00"
+  notices: ...
+  date: "2015-09-17 13:00~18:00"
   noon:
     - time: "13:00"
-      topic: 签到
+      topic: TBD
       topic_en: Check in
   afternoon:
     - time: "13:20"
-      topic: PyCon大会及活动组织方介绍
-      topic_en: PyCon大会及活动组织方介绍
-    - { time: "13:30 ~ 14:10", speaker: id_shiyuanmin }
-    - { time: "14:20 ~ 15:00", speaker: id_hepochen }
-    - time: "15:00"
-      topic: 茶歇
-      topic_en: Intermission
-    - { time: "15:20", speaker: id_linhuchong }
-    - { time: "16:10", speaker: id_lifeng }
-    - time: "17:00" 
-      topic: 合影结束
+      topic: TBD
