--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -1,8 +1,8 @@
-name: PyCon2014China
-description: Python中国2014大会官方网站
-description_en: The official site for PyCon China 2014
+name: PyCon2015China
+description: Python中国2015大会官方网站
+description_en: The official site for PyCon China 2015
 author: PyConChina@googlegroups.com
-url: http://cn.pycon.org/2014/
+url: http://cn.pycon.org/
 home_url: "./"
 home_url_en: "../en/"
 base_url: "."
