#33 fixed 调整了菜单,追加了两个金数据报表

--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -37,6 +37,28 @@ shanghai:
   afternoon:
   lightening_talks:
 
+
+####################################################################
+#   广州
+#     ____ _____
+#    / ___|__  /
+#   | |  _  / /
+#   | |_| |/ /_
+#    \____/____|
+#   
+####################################################################
+guangzhou:
+  address: TBD
+  venue: TBD
+  traffic: TBD
+  notices: (￣▽￣)
+  date: 2015-09-17 09:30~18:05
+  morning:
+  noon:
+  afternoon:
+  lightening_talks:
+  cancel_talks:
+
 ####################################################################
 #   珠三角
 #    ______   _
