--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -1,7 +1,7 @@
 name: PyCon2015China
 description: Python中国2015大会官方网站
 description_en: The official site for PyCon China 2015
-author: PyConChina@googlegroups.com
+author: support@PyChina.org
 url: http://cn.pycon.org/
 home_url: "./"
 home_url_en: "../en/"
