--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -5,6 +5,8 @@ page_title_index: 首页
 page_title_index_en: HOME
 page_title_proposals: 主题
 page_title_proposals_en: Proposals
+page_title_tshirt: T裇
+page_title_tshirt_en: TEE
 page_title_beijing: 北京日程
 page_title_beijing_en: Schedule in Beijing
 page_title_shanghai: 上海日程
