--- a/src/data/_nav.yaml
+++ b/src/data/_nav.yaml
@@ -9,6 +9,10 @@
     title_en: SPONSORS
     url: "sponsor_com.html"
     url_en: "en/sponsor_com.html"
+  - title: T裇
+    title_en: TEE
+    url: "tshirt.html"
+    url_en: "en/tshirt.html"
   - title: 私人
     title_en: DONATOR
     url: "donators.html"
