修改2015 E文 内容

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -27,7 +27,7 @@ page_title_hangzhou_en: Schedule in Hangzhou
 # home
 #########################################
 home_title: 中国PyCon 2015大会 要来了!
-home_title_en: PyCon2015China comming soon!
+home_title_en: PyCon 2015 China coming soon!
 home_sponsors: 大会赞助
 home_sponsors_en: Sponsors
 #########################################
