--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -33,6 +33,13 @@
   link: https://coding.net/home.html
   intro: "Coding 是一个软件开发平台—— 提供快速的软件开发环境，包括 Web IDE、代码托管、项目协作、部署演示等，同时还有Coding 悬赏平台，帮助软件项目的需求方快速找到合适的开发者完成项目开发工作，也帮助开发者能够找到合适的项目将自己的能力变成财富."
   intro_en: "Coding is a cloud development platform for developers, Provide code hosting, space operation, quality control, project management, etc., Coding provide social collaboration capabilities, including the SNS to provide developers with technical discussion and collaboration platform."
+-
+  level_gold: 1
+  level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/books-hz-logo_nowords.png?imageView2/2/h/90
+  link: http://www.hzbook.com/About/About.html
+  intro: " 北京华章图文信息有限公司是机械工业出版社与(美国)万国图文信息有限公司共同投资建立的合资企业,主要从事科技,经管,外语领域的图书出版服务业务,公司成立于1995年10月. '国际视野,教育为本,专业出版'是我们发展的重要指导思想,全球采集内容,服务中国教育,成为华章的鲜明特色. 公司出版的图书代表着计算机,经济管理,文化和英语教学领域的最新视野,能最好地满足专业人士,教师和学生不断变化的需求. '与您携手,共奏华章',华章人以澎湃的激情,崭新的视角,伴您走向成功!"
+  intro_en: "HZ Book is a joint venture set up with China Machine Press and (US)WanGuo."
 
 #########################################
 #   白银级
