--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -22,6 +22,13 @@
 #########################################
 #   白金级
 #########################################
+-
+  level_platinum: 1
+  level: platinum
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff14/logo/seeedstudio-2014-LOGO03.png?imageView2/2/w/280
+  link: http://www.speedycloud.cn/
+  intro: "SpeedyCloud是业界领先的云计算服务提供商迅达云成公司旗下品牌,专注于为企业提供互联网及企业IT相关基础设施云服务. 公司成员绝大多数来自于蓝汛,世纪互联等IT运维服务型上市企业, 利用最新的云计算及互联网技术帮助客户迅速扩展在线业务."
+  intro_en: "SpeedyCloud is the IaaS brand owned by Beijing SpeedyCloud Technology Co., Ltd.,, who is one of the leaders in cloud industry.The company was setup in 2012, with the capital of 10 million RMB invested all by ourselves.Being the general solution provider,  our focus is to provide IaaS for Internet and enterprises companies. Most of the team came from public IT operating and service companies like ChinaCache, 21ViaNet, etc. We are helping our customers with the most cutting-edge cloud computing technologies to expand their online businesses. "
 
 #########################################
 #   黄金级
