kill all chinese code

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -119,8 +119,8 @@ sponsors_partner_en: Partner
 #########################################
 volunteers: 志愿者们
 volunteers_en: Volunteers
-pythoneer: <b><A NAME="anchor">pythoneer</a></b> ~ <sub>"A pioneer within the Python programming language community."</sub> 即, Pythoneer 是更加专业的 Pythonista, Pythoner 是最基础的 Python 用户.
-pythoneer_en: <b><A NAME="anchor">pythoneer</a></b> ~ "A pioneer within the Python programming language community." means, Pythoneer COOL than Pythonista, btw Pythoner just Python beginner.
+pythoneer: <b><A NAME="anchor">pythoneer</a></b> ~ <sub>"A pioneer within the Python programming language community."</sub> 即 Pythoneer 是更加专业的 Pythonista. Pythoner 是最基础的 Python 用户.
+pythoneer_en: <b><A NAME="anchor">pythoneer</a></b> ~ "A pioneer within the Python programming language community." means Pythoneer COOL than Pythonista. btw Pythoner just Python beginner.
 organizers: 组织者
 organizers_en: Coordinators
 technicians: 技术组
