--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -11,7 +11,7 @@
 -
   level_partner: 1
   level: partner
-  logo: http://dn-pyconcn.qbox.me/zoomquiet/stuff14/logo/cstnet-logo.png?imageView2/2/w/200
+  logo: http://dn-pyconcn.qbox.me/zoomquiet/stuff14/logo/cstnet-logo.png?imageView2/2/h/160
   link: http://www.cstnet.net.cn/overview.htm
   intro: "中国科技网是中国科学院领导下的学术性,非盈利的科研计算机网络. 中国科技网(CSTNET)已经成为中国互联网行业快速发展的一支重要力量,为广大用户提供互联网接入,小区宽带,科研数据中心(IDC),网络管理与安全服务,视频会议系统,邮件系统,桌面会议系统,会议服务平台,科研在线文档库,组织通讯录,实验室信息系统,科研主页,科信,中国科技网通行证等服务,以及网络前沿技术研发等,为国家科学技术的创新发展提供基础性的信息化支撑与保障. "
 
@@ -38,7 +38,7 @@
   level: gold
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff14/logo/coding_logo.png?imageView2/2/h/66
   link: https://coding.net/home.html
-  intro: "Coding 是一个软件开发平台—— 提供快速的软件开发环境，包括 Web IDE、代码托管、项目协作、部署演示等，同时还有Coding 悬赏平台，帮助软件项目的需求方快速找到合适的开发者完成项目开发工作，也帮助开发者能够找到合适的项目将自己的能力变成财富."
+  intro: "Coding 是一个软件开发平台--- 提供快速的软件开发环境,包括 Web IDE,代码托管,项目协作,部署演示等,同时还有Coding 悬赏平台,帮助软件项目的需求方快速找到合适的开发者完成项目开发工作,也帮助开发者能够找到合适的项目将自己的能力变成财富."
   intro_en: "Coding is a cloud development platform for developers, Provide code hosting, space operation, quality control, project management, etc., Coding provide social collaboration capabilities, including the SNS to provide developers with technical discussion and collaboration platform."
 -
   level_gold: 1
@@ -56,7 +56,7 @@
   level: silver
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff14/logo/turingbook-Logo.jpg?imageView2/2/w/120
   link: http://www.ituring.com.cn
-  intro: "图灵公司始终以策划出版高质量的科技书籍为核心业务，推出了一系列高质量的畅销科技图书，是国内计算机图书市场最有影响力的出版单位之一。图灵社区以为读者提供一流的内容为己任，拥有众多资深技术爱好者用户，是国内最专业的IT技术“交流+阅读”社区之一。图灵社区经过不断升级改造和尝试实践，已迅速成为国内知名科技电子书出版销售平台。"
+  intro: "图灵公司始终以策划出版高质量的科技书籍为核心业务,推出了一系列高质量的畅销科技图书,是国内计算机图书市场最有影响力的出版单位之一. 图灵社区以为读者提供一流的内容为己任,拥有众多资深技术爱好者用户,是国内最专业的IT技术'交流+阅读'社区之一. 图灵社区经过不断升级改造和尝试实践,已迅速成为国内知名科技电子书出版销售平台. "
   intro_en: "Turing Co., Ltd  persists in planning publishing high quality books of science and technology as the core business, launched a series of high quality best-selling technology books, it's one of China famous and influential computer books publisher and Professional technical & Reading community. Set up nine years, accumulative total sold more than 500 copies of books and have impress millions of readers. Turing Co., Ltd that provide first-class content is its responsibility. Rapid growth in recent years has been for domestic famous ebook sales platform of science and technology."
 
 #########################################
@@ -68,4 +68,4 @@
   level: bronze
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/qichang_w2048.png?imageView2/2/w/120
   link: http://gzqichang.com
-  intro: "广州齐昌网络科技有限公司，专注于技术咨询和开发外包业务，承接基于Web技术的开发业务外包,包括基于浏览器/服务器模式的应用软件、电子商务和电子政务系统研发，承接基于iOS、Android的软件开发业务外包，承接基于 Linux的系统软件开发外包。齐昌网络由赖勇浩于2014年底创办，赖勇浩也是多届的PyCon分享讲师，在Python相关技术上有深入研究，除技术博客有近250万浏览量外还合著有《编写高质量代码：改善Python程序的91个建议》一书。"
+  intro: "广州齐昌网络科技有限公司,专注于技术咨询和开发外包业务,承接基于Web技术的开发业务外包,包括基于浏览器/服务器模式的应用软件,电子商务和电子政务系统研发,承接基于iOS,Android的软件开发业务外包,承接基于 Linux的系统软件开发外包. 齐昌网络由赖勇浩于2014年底创办,赖勇浩也是多届的PyCon分享讲师,在Python相关技术上有深入研究,除技术博客有近250万浏览量外还合著有<<编写高质量代码:改善Python程序的91个建议>>一书. "
