--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -91,8 +91,8 @@ sponsors_en: SPONSORS
 sponsors_hint: >
   赞助商为PyCon大会的成功举办提供了必不可少的支持.
   如果您和您的公司愿意支持中国Python社区的交流事业,请参考以下文档联系我们:
-    <ul><li>赞助商权益说明书, 下载: <a href="http://dn-pyconcn.qbox.me/zoomquiet/stuff15/PyCon15China_sponsor_info.pdf">PyCon15China_sponsor_info.pdf</a>
-    </li><li>特别的,个人赞助权益说明书参考: <a href="http://dn-pyconcn.qbox.me/zoomquiet/stuff15/PyCon15China_personal_sponsor.pdf">PyCon15China_personal_sponsor.pdf</a>
+    <ul><li>赞助商权益说明书, 下载: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_sponsor_info.pdf">PyCon15China_sponsor_info.pdf</a>
+    </li><li>特别的,个人赞助权益说明书参考: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_personal_sponsor.pdf">PyCon15China_personal_sponsor.pdf</a>
     </li></ul>
   赞助商在大会官网的首页及"赞助商"页面展示您的公司Logo及简介.
 sponsors_hint_en: >
