--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -26,7 +26,7 @@ page_title_hangzhou_en: Schedule in Hangzhou
 #########################################
 # home
 #########################################
-home_title: 中国PyCon 2015大会 要来了!
+home_title: <img src="http://pyconcn.qiniucdn.com/zoomquiet/res/logo/150801-cnpycon-barnner-h80.png" /> 来了!
 home_title_en: PyCon 2015 China coming soon!
 home_sponsors: 大会赞助
 home_sponsors_en: Sponsors
