--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -2,8 +2,8 @@ name: PyCon2015China
 description: Python中国2015大会官方网站
 description_en: The official site for PyCon China 2015
 author: support@PyChina.org
-url: http://cn.pycon.org/
+url: http://cn.pycon.org/2015/
 home_url: "./"
-home_url_en: "../en/"
+home_url_en: "./en/"
 base_url: "."
-base_url_en: ".."
+base_url_en: "."
